--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,12 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
-- script: |
-    cd android
-    bundle install
-    fastlane build
-  displayName: 'Build android'
+
+- task: Gradle@2
+  inputs:
+    workingDirectory: '$(system.defaultWorkingDirectory)/android'
+    gradleWrapperFile: '$(system.defaultWorkingDirectory)/android/gradlew'
+    gradleOptions: '-Xmx3072m'
+    publishJUnitResults: false
+    testResultsFiles: '**/TEST-*.xml'
+    tasks: 'assembleDebug'
